--- a/views/404.njk
+++ b/views/404.njk
@@ -1,14 +1,1 @@
-
-
-{% block content %}
-    <div class="container text-center">
-        <h1>Oopsie Wooopsie!</h1>
-        <img src="https://path_to_some_funny_image.jpg" alt="404 error">
-        <p>
-            We made a fucky wucky! Our code monkies at the back couldn't find the page you were looking for.
-        </p>
-        <p>
-            <a href="/" class=" btn btn-primary">Home</a>
-        </p>
-    </div>
-{% endblock %}
+<h1>This was a 404</h1>
