--- a/views/components/header/macro.njk
+++ b/views/components/header/macro.njk
@@ -1,3 +1,3 @@
-{% macro govukHeader(params) %}
-  {%- include "./template.njk" -%}
+{% macro mainNavbar(params) %}
+    {%- include "./navbar.njk" -%}
 {% endmacro %}
