--- a/views/home.njk
+++ b/views/home.njk
@@ -1,72 +1,12 @@
 {% extends "template.njk" %}
 
 {% block content %}
-    <div class="govuk-width-container">
-        <main class="govuk-main-wrapper">
-            <div class="govuk-grid-row centerOnPage">
-                <div class="govuk-grid-column-three-quarters">
-                    {% from "govuk/components/input/macro.njk" import govukInput %}
-                    {% from "govuk/components/fieldset/macro.njk" import govukFieldset %}
+    {% from "./components/header/macro.njk" import mainNavbar %}
 
-                    {% call govukFieldset({
-                        legend: {
-                            text: "What is your address?",
-                            classes: "govuk-fieldset__legend--l",
-                            isPageHeading: true
-                        }
-                    }) %}
+    {{ mainNavbar(configData) }}
 
-                        {{ govukInput({
-                            label: {
-                                text: "Address line 1"
-                            },
-                            id: "address-line-1",
-                            name: "addressLine1",
-                            autocomplete: "address-line1"
-                        }) }}
-
-                        {{ govukInput({
-                            label: {
-                                text: "Address line 2 (optional)"
-                            },
-                            id: "address-line-2",
-                            name: "addressLine2",
-                            autocomplete: "address-line2"
-                        }) }}
-
-                        {{ govukInput({
-                            label: {
-                                text: "Town or city"
-                            },
-                            classes: "govuk-!-width-two-thirds",
-                            id: "address-town",
-                            name: "addressTown",
-                            autocomplete: "address-level2"
-                        }) }}
-
-                        {{ govukInput({
-                            label: {
-                                text: "Postcode"
-                            },
-                            classes: "govuk-input--width-10",
-                            id: "address-postcode",
-                            name: "addressPostcode",
-                            autocomplete: "postal-code"
-                        }) }}
-
-                    {% endcall %}                </div>
-
-            </div>
-
-            <hr class="govuk-section-break govuk-section-break--visible">
-        </main>
-    </div>{% endblock %}
+    <h1>Hello world!</h1>
+{% endblock %}
 
 {% block bodyEnd %}
-    {# Run JavaScript at end of the <body>, to avoid blocking the initial render. #}
-    <script src="/js/bundle.js"></script>
-    <script type="module">
-        import { initAll } from '/js/govuk-frontend.min.js'
-        initAll()
-    </script>
 {% endblock %}
