--- a/views/template.njk
+++ b/views/template.njk
@@ -1,50 +1,35 @@
-{% from "./components/header/macro.njk" import govukHeader -%}
-{% from "./components/footer/macro.njk" import govukFooter -%}
 <!DOCTYPE html>
-<html lang="{{ htmlLang | default("en", true) }}" class="govuk-template {%- if htmlClasses %} {{ htmlClasses }}{% endif %}">
-  <head>
-    <meta charset="utf-8">
-    <title {%- if pageTitleLang %} lang="{{ pageTitleLang }}"{% endif %}>{% block pageTitle %}AARONDEV.CO.UK - A Personal Project{% endblock %}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-    <meta name="theme-color" content="{{ themeColor | default("#0b0c0c", true) }}"> {#- Hardcoded value of $govuk-black #}
+<html lang="{{ htmlLang | default("en", true) }}"{% if htmlClasses %} class="{{ htmlClasses }}"{% endif %}>
+<head>
+  <meta charset="utf-8">
+  <title{% if pageTitleLang %} lang="{{ pageTitleLang }}"{% endif %}>{% block pageTitle %}AARONDEV.CO.UK - A Personal Project{% endblock %}</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    {% block headIcons %}
-      <link rel="icon" sizes="48x48" href="{{ assetPath | default("/assets", true) }}/images/favicon.ico">
-      <link rel="icon" sizes="any" href="{{ assetPath | default("/assets", true) }}/images/favicon.svg" type="image/svg+xml">
-      <link rel="mask-icon" href="{{ assetPath | default("/assets", true) }}/images/govuk-icon-mask.svg" color="{{ themeColor | default("#0b0c0c") }}"> {#- Hardcoded value of $govuk-black #}
-      <link rel="apple-touch-icon" href="{{ assetPath | default("/assets", true) }}/images/govuk-icon-180.png">
-      <link rel="manifest" href="{{ assetPath | default("/assets", true) }}/manifest.json">
-    {% endblock %}
+  {% block headIcons %}
+  {% endblock %}
 
-    {% block head %}
-      <link rel="stylesheet" href="/css/main.css">
-    {% endblock %}
+  {% block head %}
+    <link rel="stylesheet" href="/css/main.css">
+  {% endblock %}
+</head>
+<body class="dark-mode{% if bodyClasses %} {{ bodyClasses }}{% endif %}"{% for attribute, value in bodyAttributes %} {{ attribute }}="{{ value }}"{% endfor %}>
+<script{% if cspNonce %} nonce="{{ cspNonce }}"{% endif %}>document.body.className += ' js-enabled';</script>
+{% block bodyStart %}{% endblock %}
 
-    {#- OpenGraph images needs to be absolute, so we need either a URL for the image or for assetUrl to be set #}
-    {% if opengraphImageUrl or assetUrl %}
-    <meta property="og:image" content="{{ opengraphImageUrl | default(assetUrl + "/images/govuk-opengraph-image.png", true) }}">
-    {% endif %}
+{% block header %}
+  <!-- Bootstrap NavBar or custom header -->
+{% endblock %}
 
-  </head>
-  <body class="govuk-template__body {%- if bodyClasses %} {{ bodyClasses }}{% endif %}" {%- for attribute, value in bodyAttributes %} {{ attribute }}="{{ value }}"{% endfor %}>
-    <script {%- if cspNonce %} nonce="{{ cspNonce }}"{% endif %}>document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');</script>
-    {% block bodyStart %}{% endblock %}
+{% block main %}
+  <div class="container{% if containerClasses %} {{ containerClasses }}{% endif %}">
+    {% block beforeContent %}{% endblock %}
+    <main class="mt-3{% if mainClasses %} {{ mainClasses }}{% endif %}" id="main-content" role="main"{% if mainLang %} lang="{{ mainLang }}"{% endif %}>
+      {% block content %}{% endblock %}
+    </main>
+  </div>
+{% endblock %}
 
-    {% block header %}
-      {{ govukHeader({}) }}
-    {% endblock %}
-
-    {% block main %}
-      <div class="govuk-width-container {%- if containerClasses %} {{ containerClasses }}{% endif %}">
-        {% block beforeContent %}{% endblock %}
-        <main class="govuk-main-wrapper {%- if mainClasses %} {{ mainClasses }}{% endif %}" id="main-content" role="main" {%- if mainLang %} lang="{{ mainLang }}"{% endif %}>
-          {% block content %}{% endblock %}
-        </main>
-      </div>
-    {% endblock %}
-
-    {{ govukFooter({}) }}
-
-    {% block bodyEnd %}{% endblock %}
-  </body>
+<script src="/js/bundle.js"></script>
+{% block bodyEnd %}{% endblock %}
+</body>
 </html>
