--- a/views/contact.njk
+++ b/views/contact.njk
@@ -6,7 +6,7 @@
 
     {{ mainNavbar(configData) }}
 
-    <h1 class="test">Oh no, im sad to say this is a 404 Error page :(</h1>
+    <h1 class="test">This is the contact page!!</h1>
 {% endblock %}
 
 {% block footer %}
