--- a/views/template.njk
+++ b/views/template.njk
@@ -27,6 +27,11 @@
       {% block content %}{% endblock %}
     </main>
   </div>
+
+
+{% endblock %}
+
+{% block footer %}
 {% endblock %}
 
 <script src="/js/bundle.js"></script>
