--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,37 @@
 @import "../../node_modules/bootstrap/scss/bootstrap";
 
+$color-dark-mode-background: #121212; // Base dark background color
+$color-dark-mode-text: #e0e0e0; // Primary text color for dark mode
+
+$color-dark-mode-gray: #9a9a9a; // Link color for dark mode
+$color-dark-mode-white: #ffffff; // High contrast text color
+$color-dark-mode-blue: #00b4d8; // Accent color for interactive elements
+$color-dark-mode-deepBlue: #0b5890; // Primary color for important components
+$color-dark-mode-greenish: #a3b59a; // Secondary color for complementary elements
+$color-dark-mode-green: #6f922d; // Info color for informational messages
+$color-dark-mode-red: #97102c; // Warning color for alerts and error messages
+
+html {
+  height: 100%;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  margin: 0;
+}
+
+.container {
+  flex: 1; // This will allow the container to expand and push the footer down
+}
+
+.footer {
+  background: transparent; // Use the variable for consistency
+  color: $color-dark-mode-text;
+  padding: 5px 0; // Reduced padding for the footer itself
+}
+
 .centerOnPage {
   display: grid;
   place-items: center;
@@ -12,4 +44,8 @@ body.dark-mode {
 
 body.dark-mode a {
   color: #9a9a9a; /* Example: Adjusting link colors for dark mode */
+}
+
+.text-white {
+  color: $color-dark-mode-text;
 }
