--- a/views/home.njk
+++ b/views/home.njk
@@ -4,25 +4,19 @@
     <div class="container">
         {% from "./components/header/macro.njk" import mainNavbar %}
 
-        {{ mainNavbar(configData) }}{% endblock %}
-
-        
+        {{ mainNavbar(configData) }}
     </div>
-
+{% endblock %}
 
 {% block content %}
-
-
     <div class="root-hero centerOnPage">
         <h1 class="test">Hello world!</h1>
         <p>This is a test to see if it works!</p>
     </div>
-
 {% endblock %}
 
 {% block footer %}
     {% from "./components/footer/macro.njk" import footerNav %}
-
     {{ footerNav(configData) }}
 {% endblock %}
 
