--- a/views/about.njk
+++ b/views/about.njk
@@ -1,17 +1,20 @@
 {% extends "template.njk" %}
 
+{% block header %}
+    <div class="container">
+        {% from "./components/header/macro.njk" import mainNavbar %}
+
+        {{ mainNavbar(configData) }}
+    </div>
+{% endblock %}
 
 {% block content %}
-    {% from "./components/header/macro.njk" import mainNavbar %}
-
-    {{ mainNavbar(configData) }}
 
     <h1 class="test">This is the about page!!</h1>
 {% endblock %}
 
 {% block footer %}
     {% from "./components/footer/macro.njk" import footerNav %}
-
     {{ footerNav(configData) }}
 {% endblock %}
 
